next: login / logou

--- a/static/css/juke.css
+++ b/static/css/juke.css
@@ -1,41 +1,49 @@
 body {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  line-height: 1.5;
-  /* white-space: pre; */ 
-  background-color: #222;
-  color: #ccc;
-  font-family: verdana;
-  padding: 7px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 1.5;
+    /* white-space: pre; */
+    background-color: #222;
+    color: #ccc;
+    font-family: verdana;
+    padding: 7px;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    color: #ccc;
+    padding: 10px;
 }
 
 li {
-  text-align: left;
+    text-align: left;
 }
 
 h3 {
-  color: #ccc;
+    color: #ccc;
 }
 
 form {
-  color: #ccc;
-  border-color: #f00;
-  white-space: normal;
-  line-height: 3;
+    color: #ccc;
+    border-color: #f00;
+    white-space: normal;
+    line-height: 3;
 }
 
 a {
-  color: #77f;
+    color: #77f;
 }
 
 a.visited {
-  color: #f77;
+    color: #f77;
 }
 
 input {
-  color: #ccc;
-  background-color: #433;
-  border-color: #ccc;
+    color: #ccc;
+    background-color: #433;
+    border-color: #ccc;
 }
