--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -2,55 +2,18 @@
 <html lang="en">
 
 <head>
+    <title>Jukebox</title>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <title>Juke</title>
     <link rel="icon"
           type="image/x-icon"
           href="img/favicon.ico" />
     <link rel="stylesheet"
           href="css/juke.css" />
+    <script src="js/htmx.js"></script>
 </head>
 
-<body>
-    <header>
-        <h1>Schurlix' Jukebox</h1>
-    </header>
-    <form method="POST"
-          accept-charset="UTF-8"
-          action="search/search.py">
-        Suche: <input NAME="Regex"
-               TYPE="text"
-               placeholder="regex, case insensitive"><br>
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="Vorschau">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="m3u">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="zipdatei">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="Debug">
-    </form>
-    <!--
-<form method="POST" accept-charset="UTF-8" action="fast.py">
-  Suche (fast.py): <input NAME="Regex" TYPE="text" placeholder="regex, case insensitive"><br>
-  <input NAME="Mode" TYPE="submit" VALUE="urxn">
-</form>
--->
-    <section>
-        Eine <a href="allfiles.txt">Liste mit allen Files</a>, die es hier gibt.
-    </section>
-    <section>
-        Damit das Suchen auch wirklich Spaß macht, ist es hilfreich,<br /> sich mit
-        <a href="https://de.wikipedia.org/wiki/Regul%C3%A4rer_Ausdruck">Regulären Ausdrücken</a>
-        auszukennen.<br />🤓
-    </section>
-
-</body>
+{{> body }}
 
 </html>
