--- a/partials/main.hbs
+++ b/partials/main.hbs
@@ -1,17 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<main>
+    <form method="POST"
+          accept-charset="UTF-8"
+          action="search/search.py">
+        Suche: <input NAME="Regex"
+               TYPE="text"
+               placeholder="regex, case insensitive"><br>
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="Vorschau">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="m3u">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="zipdatei">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="Debug">
+    </form>
+    <form method="POST"
+          accept-charset="UTF-8"
+          action="fast.py">
+        Suche (fast.py): <input NAME="Regex"
+               TYPE="text"
+               placeholder="regex, case insensitive"><br>
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="urxn">
+    </form>
+    <section>
+        Eine <a href="allfiles.txt">Liste mit allen Files</a>, die es hier gibt.
+    </section>
+    <section>
+        Damit das Suchen auch wirklich Spaß macht, ist es hilfreich,<br /> sich mit
+        <a href="https://de.wikipedia.org/wiki/Regul%C3%A4rer_Ausdruck">Regulären Ausdrücken</a>
+        auszukennen.<br />🤓
+    </section>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/htmx.js"></script>
-    <title>Jukebox</title>
-</head>
-
-<body>
-    {{> header}}
-    {{> main}}
-    {{> footer}}
-</body>
-
-</html>
+</main>
