--- a/static/css/juke.css
+++ b/static/css/juke.css
@@ -12,7 +12,7 @@ body {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #333;
     color: #ccc;
