--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -12,6 +12,8 @@
     <link rel="stylesheet"
           href="css/juke.css" />
     <script src="js/htmx.js"></script>
+    <script src="js/script.js"
+            defer></script>
 </head>
 
 <body>
