--- a/partials/body.hbs
+++ b/partials/body.hbs
@@ -7,3 +7,9 @@
 <footer>
     {{> footer}}
 </footer>
+<div id="spinner">
+    <img src="img/spinner.png"
+         alt="Loading..."
+         width="60"
+         height="60">
+</div>
