--- a/static/css/juke.css
+++ b/static/css/juke.css
@@ -47,3 +47,26 @@ input {
     background-color: #433;
     border-color: #ccc;
 }
+
+#spinner {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+#spinner> :first-child {
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
