--- a/partials/body.hbs
+++ b/partials/body.hbs
@@ -8,7 +8,7 @@
     {{> footer}}
 </footer>
 <div id="spinner">
-    <img src="img/spinner.png"
+    <img src="img/favicon.png"
          alt="Loading..."
          width="60"
          height="60">
