footer, mountpoint, admin box, config

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,1 +1,3 @@
-footer
+<p>&copy; 2025 Georg Graf
+    <a href="https://github.com/georgernstgraf/jukebox">https://github.com/georgernstgraf/jukebox</a>
+</p>
