--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -8,11 +8,11 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="icon"
           type="image/x-icon"
-          href="img/favicon.ico" />
+          href="{{config.mountpoint}}/img/favicon.ico">
     <link rel="stylesheet"
-          href="css/juke.css" />
-    <script src="js/htmx.js"></script>
-    <script src="js/script.js"
+          href="{{config.mountpoint}}/css/juke.css">
+    <script src="{{config.mountpoint}}/js/htmx.js"></script>
+    <script src="{{config.mountpoint}}/js/script.js"
             defer></script>
 </head>
 
