admin, stats, host and port

--- a/partials/main/authenticated.hbs
+++ b/partials/main/authenticated.hbs
@@ -1,61 +1,35 @@
 {{#if session.isAdmin}}
-<h1>Willkommen, Admin {{session.username}}!</h1>
+<h2>Willkommen, Admin {{session.username}}!</h2>
 <div class="admin">
     {{> admin/admin }}
 </div>
 {{else}}
-<h1>Willkommen {{session.username}}</h1>
-<p>Musik zu suchen.</p>
+<h2>Willkommen {{session.username}}!</h2>
 {{/if}}
-
-{{! <form method="POST"
-      accept-charset="UTF-8"
-      action="login">
-    Benutzername: <input NAME="username"
-           TYPE="text"
-           placeholder="Benutzername"><br>
-    Passwort: <input NAME="password"
-           TYPE="password"
-           placeholder="Passwort"><br>
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="Anmelden">
-
-{{! <form method="POST"
-      accept-charset="UTF-8"
-      action="search/search.py">
-    Suche: <input NAME="Regex"
-           TYPE="text"
-           placeholder="regex, case insensitive"><br>
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="Vorschau">
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="m3u">
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="zipdatei">
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="Debug">
-</form>
-<form method="POST"
-      accept-charset="UTF-8"
-      action="fast.py">
-    Suche (fast.py): <input NAME="Regex"
-           TYPE="text"
-           placeholder="regex, case insensitive"><br>
-    <input NAME="Mode"
-           TYPE="submit"
-           VALUE="urxn">
-</form>
-<section>
+{{! following is for both}}
+<section class="search">
+    <h3>Suche</h3>
+    <form method="POST"
+          accept-charset="UTF-8"
+          action="{{config.mountpoint}}/search"
+          {{!--hx-post="{{config.mountpoint}}/search">--}}
+          Suche:
+          <input
+          NAME="Regex"
+          TYPE="text"
+          placeholder="regex, case insensitive"><br>
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="Vorschau">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="m3u">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="zipdatei">
+        <input NAME="Mode"
+               TYPE="submit"
+               VALUE="Debug">
+    </form>
     Eine <a href="allfiles.txt">Liste mit allen Files</a>, die es hier gibt.
 </section>
-<section>
-    Damit das Suchen auch wirklich Spaß macht, ist es hilfreich,<br /> sich mit
-    <a href="https://de.wikipedia.org/wiki/Regul%C3%A4rer_Ausdruck">Regulären Ausdrücken</a>
-    auszukennen.<br />🤓
-</section>
-}}
