1st agent change

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,5 @@
-<p>&copy; 2025 Georg Graf
-    <a href="https://github.com/georgernstgraf/jukebox">https://github.com/georgernstgraf/jukebox</a>
-</p>
+<footer>
+    <p>&copy; 2025 Georg Graf
+        <a href="https://github.com/georgernstgraf/jukebox">https://github.com/georgernstgraf/jukebox</a>
+    </p>
+</footer>
