--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,4 +1,6 @@
-<h1>Schurlix' Jukebox</h1>
-<nav>
-    {{> nav}}
-</nav>
+<header>
+    <h1>Schurlix' Jukebox</h1>
+    <nav>
+        {{> nav}}
+    </nav>
+</header>
