--- a/partials/main.hbs
+++ b/partials/main.hbs
@@ -1,5 +1,7 @@
-{{#if session.username}}
-{{> main/authenticated}}
-{{else}}
-{{> main/login}}
-{{/if}}
+<main>
+    {{#if session.username}}
+    {{> main/authenticated}}
+    {{else}}
+    {{> main/login}}
+    {{/if}}
+</main>
