--- a/partials/body.hbs
+++ b/partials/body.hbs
@@ -1,9 +1,11 @@
-{{> header}}
-{{> main}}
-{{> footer}}
-<div id="spinner">
-    <img src="{{config.mountpoint}}/img/favicon.png"
-         alt="Loading..."
-         width="60"
-         height="60">
-</div>
+<body>
+    {{> header}}
+    {{> main}}
+    {{> footer}}
+    <div id="spinner">
+        <img src="{{config.mountpoint}}/img/favicon.png"
+             alt="Loading..."
+             width="60"
+             height="60">
+    </div>
+</body>
