--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -15,6 +15,9 @@
     <script src="{{config.mountpoint}}/js/script.js"
             defer></script>
 </head>
-{{> body }}
+
+<body>
+    {{> body }}
+</body>
 
 </html>
