--- a/partials/main/login.hbs
+++ b/partials/main/login.hbs
@@ -1,6 +1,7 @@
+{{! ??? outer wrapper neccessary ???}}
 <h2>Log in</h2>
 <form method="post"
-      action="/login"
+      action="{{config.mountpoint}}/login"
       hx-post="{{config.mountpoint}}/login"
       hx-target="body"> {{! header needs also be replaced }}
     <input type="text"
