--- a/partials/profile.hbs
+++ b/partials/profile.hbs
@@ -1,7 +1,9 @@
-{{#if session.username}}
-<button type="button"
-        hx-post="{{config.mountpoint}}/logout"
-        hx-target="body">log out {{session.username}}</button>
-{{else}}
-<p>You are not logged in.</p>
-{{/if}}
+<div class="profile">
+    {{#if session.username}}
+    <button type="button"
+            hx-post="{{config.mountpoint}}/logout"
+            hx-target="body">log out {{session.username}}</button>
+    {{else}}
+    <p>You are not logged in.</p>
+    {{/if}}
+</div>
