admin rename, synctask (class verify)

--- a/partials/main/authenticated.hbs
+++ b/partials/main/authenticated.hbs
@@ -1,6 +1,6 @@
 {{#if session.isAdmin}}
 <h2>Willkommen, Admin {{session.username}}!</h2>
-{{> admin/admin }}
+{{> admin }}
 {{else}}
 <h2>Willkommen {{session.username}}!</h2>
 {{/if}}
