--- a/partials/error.hbs
+++ b/partials/error.hbs
@@ -6,6 +6,6 @@ error: JSON.stringify(process.env.NODE_ENV === "production" ? undefined : err),
     <p>Error: {{message}}</p>
     {{#if error}}
     <p>Details:</p>
-    <code>{{error}}</code>
+    <code>{{{error}}}</code>
     {{/if}}
 </div>
