--- a/partials/main/authenticated.hbs
+++ b/partials/main/authenticated.hbs
@@ -5,29 +5,4 @@
 <h2>Willkommen {{session.username}}!</h2>
 {{/if}}
 {{! following is for both}}
-<section class="search">
-    <h3>Suche</h3>
-    <form method="POST"
-          accept-charset="UTF-8"
-          action="{{config.mountpoint}}/search"
-          {{!--hx-post="{{config.mountpoint}}/search">--}}
-          Suche:
-          <input
-          NAME="Regex"
-          TYPE="text"
-          placeholder="regex, case insensitive"><br>
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="Vorschau">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="m3u">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="zipdatei">
-        <input NAME="Mode"
-               TYPE="submit"
-               VALUE="Debug">
-    </form>
-    Eine <a href="allfiles.txt">Liste mit allen Files</a>, die es hier gibt.
-</section>
+{{> search/artistalbum }}
