syncing from actual DIR, job message, ffmpeg

--- a/partials/admin.hbs
+++ b/partials/admin.hbs
@@ -37,6 +37,7 @@
             <li>
                 doneCount: {{verify.doneCount}}
             </li>
+            <li>message: {{verify.message}}</li>
         </ul>
     </div>
 </div>
