enforceuser, reorg session

--- a/partials/search/artistalbum.hbs
+++ b/partials/search/artistalbum.hbs
@@ -48,7 +48,7 @@ searchResults--}}
                     <td class="fixed-width-col-sm">{{track.album}}</td>
                     <td class="fixed-width-col-sm">{{track.title}}</td>
                     <td class="fixed-width-col-lg">
-                        <a href="{{config.mountpoint}}/play/{{track.id}}">
+                        <a href="{{../config.mountpoint}}/play/{{track.id}}">
                             {{track.path}}
                         </a>
                     </td>
