search split into form & results admin box toggle (alpine added) readablestream instead of filestream DONT_SYNC_ON_STARTUP env enforce middleware returns html render substringof path css shit <audio> players

--- a/partials/admin.hbs
+++ b/partials/admin.hbs
@@ -1,5 +1,8 @@
-<div class="admin">
-    <h2>My admin Box</h2>
+<div class="admin"
+     x-data="{ open: true }"
+     @toggle-admin.window="open = !open"
+     x-show="open">
+    <h2>admin</h2>
     <div class="d-flex">
         <ul>
             <li>{{stats.total}} files in Database</li>
