--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -12,6 +12,8 @@
     <link rel="stylesheet"
           href="{{config.mountpoint}}/css/juke.css">
     <script src="{{config.mountpoint}}/js/htmx.js"></script>
+    <script defer
+            src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="{{config.mountpoint}}/js/script.js"
             defer></script>
 </head>
