--- a/partials/main/login.hbs
+++ b/partials/main/login.hbs
@@ -1,20 +1,21 @@
-{{! ??? outer wrapper neccessary ???}}
-<h2>Log in</h2>
-<form method="post"
-      action="{{config.mountpoint}}/login"
-      hx-post="{{config.mountpoint}}/login"
-      hx-target="body"> {{! header needs also be replaced }}
-    <input type="text"
-           name="username"
-           placeholder="Username"
-           autocomplete="username">
-    <input type="password"
-           name="password"
-           placeholder="Password"
-           autocomplete="current-password">
-    <input type="submit"
-           value="Log in">
-</form>
-{{#if error}}
-<p class="error">{{error}}</p>
-{{/if}}
+<div class="login">
+    <h2>Log in</h2>
+    <form method="post"
+          action="{{config.mountpoint}}/login"
+          hx-post="{{config.mountpoint}}/login"
+          hx-target="body"> {{! header needs also be replaced }}
+        <input type="text"
+               name="username"
+               placeholder="Username"
+               autocomplete="username">
+        <input type="password"
+               name="password"
+               placeholder="Password"
+               autocomplete="current-password">
+        <input type="submit"
+               value="Log in">
+    </form>
+    {{#if error}}
+    <p class="error">{{error}}</p>
+    {{/if}}
+</div>
