--- a/partials/search/results.hbs
+++ b/partials/search/results.hbs
@@ -7,6 +7,7 @@
     <ul class="results">
         {{#each searchResults as |track|}}
         <li title="{{track.path}}">
+            {{#if track.audio}}
             <audio src="{{../config.mountpoint}}/play/{{track.id}}"
                    controls
                    preload="none">
@@ -16,6 +17,16 @@
             <p>{{track.artist}} / {{track.album}} / {{track.title}}</p>
             {{else}}
             <p>{{track.path}}</p>
+            {{/if}}
+            {{else}}
+            {{#if track.image}}
+            <img src="{{../config.mountpoint}}/play/{{track.id}}"
+                 alt="Image for {{track.path}}"
+                 class="result-image">
+            {{else}}
+            <a href="{{../config.mountpoint}}/play/{{track.id}}"
+               target="jukeboxviewer">{{track.path}}</a>
+            {{/if}}
             {{/if}}
         </li>
         {{/each}}
