--- a/partials/admin.hbs
+++ b/partials/admin.hbs
@@ -24,11 +24,12 @@
                 {{#if verify.isRunning}}
                 {{else}}
                 <label>
-                    <input type="checkbox"
-                           id="forceVerify"
-                           name="force"
-                           value="true">
-                    Force
+                    <select id="forceVerify"
+                            name="force">
+                        <option value="basic">Basic</option>
+                        <option value="stats">Stats (1 hour)</option>
+                        <option value="all">All (1 day)</option>
+                    </select>
                 </label>
                 {{/if}}
 
@@ -46,19 +47,12 @@
                 </button></li>
         </ul>
         <ul>
-            <li>
-                isRunning: {{verify.isRunning}}
-            </li>
-            <li>
-                cancelled: {{verify.cancelled}}
-            </li>
-            <li>
-                completed: {{verify.completed}}
-            </li>
-            <li>
-                doneCount: {{verify.doneCount}}
-            </li>
+            <li>isRunning: {{verify.isRunning}}</li>
+            <li>cancelled: {{verify.cancelled}}</li>
+            <li>completed: {{verify.completed}}</li>
+            <li>doneCount: {{verify.doneCount}}</li>
             <li>message: {{verify.message}}</li>
+            <li>runTime: {{verify.runTime}}</li>
         </ul>
     </div>
 </div>
