--- a/partials/search/results.hbs
+++ b/partials/search/results.hbs
@@ -10,7 +10,7 @@
             {{#if track.audio}}
             <audio src="{{../config.mountpoint}}/play/{{track.id}}"
                    controls
-                   preload="none">
+                   preload="auto">
                 &#9654;
             </audio>
             {{#if track.hasId3}}
