admin box zu blinke

--- a/partials/admin.hbs
+++ b/partials/admin.hbs
@@ -1,5 +1,5 @@
 <div class="admin"
-     x-data="{ open: true }"
+     x-data="{ open: false }"
      @toggle-admin.window="open = !open"
      x-show="open">
     <h2>admin</h2>
