--- a/partials/search/form.hbs
+++ b/partials/search/form.hbs
@@ -5,7 +5,7 @@ searchResults--}}
 <div class="search">
     <div class="d-flex">
         <h2>Search</h2>
-        <p>(Path overrules Artist / Album)</p>
+        <p>(Path overrules Artist / Album) ... <a href="{{config.mountpoint}}/jukebox_alles.txt">alles!</a></p>
     </div>
     <form hx-post="{{config.mountpoint}}/search/results"
           hx-target=".search-results"
