bootstrap toggle search type sse endpoint avail

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,6 @@
-<footer>
-    <p>&copy; 2025 Georg Graf
-        <a href="https://github.com/georgernstgraf/jukebox">https://github.com/georgernstgraf/jukebox</a>
+<footer class="mt-3 d-flex flex-column">
+    <p class="text-center"><a href="{{config.mountpoint}}/jukebox_alles.txt">download all as .txt</a></p>
+    <p class="text-center">&copy; 2025 Georg Graf <a
+           href="https://github.com/georgernstgraf/jukebox">https://github.com/georgernstgraf/jukebox</a>
     </p>
 </footer>
