--- a/partials/body.hbs
+++ b/partials/body.hbs
@@ -1,9 +1,12 @@
-{{> header}}
-{{> main}}
-{{> footer}}
-<div id="spinner">
-    <img src="{{config.mountpoint}}/img/favicon.png"
-         alt="Loading..."
-         width="60"
-         height="60">
+<div class="container">
+    {{> header}}
+    {{> main}}
+    {{> footer}}
+    <div id="spinner"
+         class="d-none position-absolute top-50 start-50 translate-middle">
+        <img src="{{config.mountpoint}}/img/favicon.png"
+             alt="Loading..."
+             width="50"
+             height="50">
+    </div>
 </div>
