--- a/partials/index.hbs
+++ b/partials/index.hbs
@@ -2,24 +2,29 @@
 <html lang="en">
 
 <head>
-    <title>Jukebox</title>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <link rel="icon"
-          type="image/x-icon"
-          href="{{config.mountpoint}}/img/favicon.ico">
-    <link rel="stylesheet"
-          href="{{config.mountpoint}}/css/juke.css">
-    <script src="{{config.mountpoint}}/js/htmx.js"></script>
-    <script defer
-            src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script src="{{config.mountpoint}}/js/script.js"
-            defer></script>
+      <title>Jukebox</title>
+      <meta charset="UTF-8">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0">
+      <link rel="icon"
+            type="image/x-icon"
+            href="{{config.mountpoint}}/img/favicon.ico">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+            crossorigin="anonymous">
+      <link rel="stylesheet"
+            href="{{config.mountpoint}}/css/jukebox.css"
+            defer>
+      <script src="{{config.mountpoint}}/js/htmx.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+              defer></script>
+      <script src="{{config.mountpoint}}/js/script.js"
+              defer></script>
 </head>
 
-<body>
-    {{> body }}
+<body data-bs-theme="dark">
+      {{> body }}
 </body>
 
 </html>
