--- a/partials/nav.hbs
+++ b/partials/nav.hbs
@@ -1,11 +1,16 @@
-<nav>
-    <h2>Schurlix' Jukebox</h2>
-    {{#if session.username}}
-    <h1>Hi {{session.username}}!</h1>
-    {{/if}}
+<nav class="navbar justify-content-around gap-2">
+    <h1 class="text-capitalize m-0">{{#if session.username}}
+            {{session.username}}'s{{/if}}&nbsp;Jukebox</h1>
     {{#if session.isAdmin}}
-    <button x-data
-            @click="$dispatch('toggle-admin'); console.log('Admin box toggled')">Toggle Admin Box</button>
-    {{/if}}
+        <div class="form-check form-switch">
+            <label class="form-check-label">show Admin
+                <input class="form-check-input"
+                       type="checkbox"
+                       role="switch"
+                       x-data
+                       @click="$dispatch('toggle-admin'); console.log('Admin box toggled')"></input>
+            </label>
+        </div>
+    {{/if}} {{!-- is admin --}}
     {{> profile}}
 </nav>
