--- a/partials/search/results.hbs
+++ b/partials/search/results.hbs
@@ -1,40 +1,43 @@
 <div class="search-results">
     {{#if searchResults}}
-    <h3>{{searchResults.length}} results</h3>
-    {{#if maximumReached}}
-    <p>Note: Only the first {{config.search_max_results}} results are shown. Narrow your search</p>
-    {{/if}}
-    <ul class="results">
-        {{#each searchResults as |track|}}
-        <li title="{{track.path}}">  {{!-- track.audio --}}
-            {{#if track.audio}}
-                <audio src="{{../config.mountpoint}}/play/{{track.id}}"
-                       controls
-                       preload="metadata">
-                    &#9654;
-                </audio>
-                {{#if track.hasId3}}
-                    <p>{{track.artist}} / {{track.album}} / {{track.title}}</p>
-                {{else}}   {{!-- track.hasId3 --}}
-                    <p>{{track.path}}</p>
-                {{/if}}     {{!-- track.hasId3 --}}
-            {{else}}  {{!-- NO track.audio --}}
-                {{#if track.image}}  
-                    <img src="{{../config.mountpoint}}/play/{{track.id}}"
-                     alt="Image for {{track.path}}"
-                     class="result-image">
-                {{else}}  {{!-- track.image --}}
-                    <a href="{{../config.mountpoint}}/play/{{track.id}}"
-                   target="jukeboxviewer">{{track.path}}</a>
-                {{/if}}  {{!-- track.image --}}
-            {{/if}}  {{!-- track.audio --}}
-        </li>
-        {{/each}}
-    </ul>
-    <script>
-        initAudios();
-    </script>
+        <h3 class="text-center">{{searchResults.length}} results</h3>
+        {{#if maximumReached}}
+            <p>Note: Only the first {{config.search_max_results}} results are shown. Narrow your search</p>
+        {{/if}}
+        <ul class="results d-flex flex-column list-group list-group-flush">
+            {{#each searchResults as |track|}}
+                <li class="list-group-item list-group-item-action rounded-3"
+                    title="{{track.path}}"> {{!-- track.audio --}}
+                    {{#if track.audio}}
+                        <audio class="w-100"
+                               src="{{../config.mountpoint}}/play/{{track.id}}"
+                               controls
+                               preload="metadata">
+                            &#9654;
+                        </audio>
+                        {{#if track.hasId3}}
+                            <p>{{track.artist}} / {{track.album}} / {{track.title}}</p>
+                        {{else}} {{!-- track.hasId3 --}}
+                            <p>{{track.path}}</p>
+                        {{/if}} {{!-- track.hasId3 --}}
+                    {{else}} {{!-- NO track.audio --}}
+                        {{#if track.image}}
+                            <img class="w-100"
+                                 src="{{../config.mountpoint}}/play/{{track.id}}"
+                                 alt="Image for {{track.path}}"
+                                 class="result-image">
+                        {{else}} {{!-- track.image --}}
+                            <a href="{{../config.mountpoint}}/play/{{track.id}}"
+                               target="jukeboxviewer">{{track.path}}</a>
+                        {{/if}} {{!-- track.image --}}
+                    {{/if}} {{!-- track.audio --}}
+                </li>
+            {{/each}}
+        </ul>
+        <script>
+            initAudios();
+        </script>
     {{else}}
-    <p>No results found.</p>
+        <p>No results</p>
     {{/if}}
 </div>
